--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,13 @@
           },
           "defaultConfiguration": "production"
         },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "eslintConfig": ".eslintrc.json",
+            "lintFilePatterns": [ "**/*.spec.ts", "**/*.ts"],
+          }
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
